--- a/main.css
+++ b/main.css
@@ -56,6 +56,10 @@ hr {
     margin : 1.5em 1.5em 0.75em 0.5em;
 }
 
+.select{
+    border-radius: 3px;
+}
+
 .contentWrapper {
     margin   : 0 auto;
     max-width: 1170px;
@@ -83,15 +87,18 @@ header {
     background-origin: content-box;
     background-position: right bottom;
     background-size: container;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+
 }
 
 header h1 {
     font-family   : Verdana, Geneva, sans-serif;
-    color         : #745b2f;
+    color         : ##000;
     font-size     : 7.5em;
     letter-spacing: -0.025em;
     margin        : 0;
-    text-shadow   : 4px 2px 10px #bd8437;
+    text-shadow   : 4px 2px 10px #FFF;
     /* offset-x | offset-y | blur-radius | color */
 }
 
@@ -113,21 +120,29 @@ p {
 
 .logoIMG{
     
-    height: 11rem;
+    height: 10rem;
     
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: -1rem;
+    margin-bottom: -6rem;
 }
 
 /*Nav Bars*/
 nav {
+    display: inline-block;
+    top: 10px;
+    right: 5px; 
     color         : #000;
     font-size     : 1.7em;
     letter-spacing: 0.04em;
     padding       : 1.0em 1.0em 0.5em;
     margin        : 1.0em 0;
     text-align: right;
+    background-color: rgba(255, 255, 0, 0.822);
+    position: fixed;
+    border-radius: 4px;
 }
 
 nav ul {
@@ -149,13 +164,17 @@ nav li a:visited {
 }
 
 nav li a:hover {
-    color           : #C64322;
+    color           : #FFF;
     background-color: rgba((252), 251, 243, .75);
 }
-
-h2{
-    display: inline-block;
+.cartIcon{
+    width: 1.5rem;
+    position: inherit;
+    margin-bottom: -.25rem;
 }
+/*h2{
+    display: inline-block;
+}*/
 
 /* nav#utilityMenu{
     float: right;
@@ -201,10 +220,12 @@ nav#utilityMenu ul li.acctNav::before, nav#utilityMenu ul li input#search::befor
 }
 nav#socialLinks{
     float: right;
-    margin: -1.5em 0 0 0;
+    margin: -2.5em 5px 0 0;
     padding: .35em;
-    background-color:transparent;
+    background-color:#0000004d;
     height: 1.3em;
+    position: inherit;
+    
 }
 nav#socialLink li{
     padding: 0 0.25em 0 0.2em;
@@ -216,7 +237,7 @@ nav#socialLink li{
     /*height: 125px;*/
     text-align: justify;
     border: 10px solid transparent;
-    font-size: 0.1px; /* IE 9/10 don't like font-size: 0; */
+   /* font-size: 0.1px; /* IE 9/10 don't like font-size: 0; */ 
     min-width: 600px;
   }
   .productRow div {
@@ -225,7 +246,8 @@ nav#socialLink li{
     display: inline-block;
     background: #C29A55;
     margin-top: 1.5rem;
-    margin-bottom: 1.5rem;    
+    margin-bottom: 1.5rem;   
+    border-radius: 1rem; 
 }
   .productRow:after {
     content: '';
@@ -233,7 +255,19 @@ nav#socialLink li{
     display: inline-block;
   }
   .shopItem{
-    width: 4rem;
+   
+    width: 8rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: 0;
+    border-radius: 1rem;
+}
+.item{
+    padding: 1rem;
+}
+.itemPrice{
+    font-size: 1rem;
 }
 section div.item{
     float: left;
@@ -242,8 +276,8 @@ section div.item{
     margin: 0 0.5em 2em 0.5em;
     padding: 1.0em;
     background-color: #FFF;
-    border: #CCC solid 1px;
-    border-radius: .6em;
+    border: 0 #CCC solid 1px;
+    border-radius: .6rem;
 }
 
 
