--- a/main.css
+++ b/main.css
@@ -326,6 +326,72 @@ section div.item{
     border-radius: 2rem;
     margin-right: 3rem;
 }
+
+.contactCenter{
+    width: 90%;
+    margin: 0 auto 0 auto;
+
+    display: flex;
+    margin-bottom: 4rem;
+}
+.contactLeft{
+    background: #C29A55;
+    width: 20rem;
+    margin: 0 auto 0 auto;
+    box-shadow:  4px 8px 2px rgba(0, 0, 0, 0.644), 0 6px 20px 2px rgba(0, 0, 0, 0.19);
+
+}
+.contactLeft h2{
+    color: black;
+}
+.contactRight{
+    font-size: 1rem;
+    position: relative;
+    margin-right: auto;
+}
+.contactRight ul {
+    list-style: none;
+    padding: 1rem 0 1rem 0;
+}
+.contactPhoto{
+    margin: 0 auto 0 auto;
+    display: block;
+    width: 10rem;
+
+}
+
+.formCenter{
+    padding-top: 6rem;
+    width: 80%;
+    margin: 0 auto 0 auto;
+}
+
+.formItem{
+    width: 100%;
+}
+
+.form{
+-ms-box-sizing:content-box;
+-moz-box-sizing:content-box;
+-webkit-box-sizing:content-box; 
+box-sizing:content-box;
+}
+textarea {
+    width: 103% !important;
+}
+button {
+    color: #C64322;
+    background-color: #FFF;
+    display: inline-block;
+    padding:0;
+    border: 1px solid #C64322;
+    text-transform: uppercase;
+    width: 103%;
+}
+button:hover {
+    background-color: #FBF3DB;
+    border: 1px solid #745b2f;
+}
 /* 
 .contactWrapper{
     position: relative;
@@ -361,10 +427,7 @@ section div.item{
     position: relative;
 }
 */
-.contactPhoto{
-    width: 10rem;
 
-}
 /*
 .contactInfo ul {
     margin    : 0;
@@ -404,17 +467,4 @@ footer a, footer a:visited {
 footer a:hover {
     color: #fff;
     text-decoration: underline;
-}
-button {
-    color: #C64322;
-    background-color: #FFF;
-    display: inline-block;
-    margin: 0 0.75em 0 0;
-    padding: 0.2em 0.5em;
-    border: 1px solid #C64322;
-    text-transform: uppercase;
-}
-button:hover {
-    background-color: #FBF3DB;
-    border: 1px solid #745b2f;
 }
