--- a/main.css
+++ b/main.css
@@ -162,14 +162,16 @@ nav li {
 nav li a,
 nav li a:visited {
     text-decoration: none;
-    color          : #c64322;
+    color          : black;
     padding        : 0.3em 0.15em;
+    
 }
 
 nav li a:hover {
-    color           : #F00;
+    color           : #c64322;
     background-color: #88888833;
     border-radius: 4px;
+    
 }
 .cartIcon{
     width: 1.25rem;
@@ -179,19 +181,23 @@ nav li a:hover {
 h2{
  
 }
-
+#socialLinks a:hover{
+    padding-top: 1rem !important;
+    background-color: #07D5D5;
+}
 .socialIcon{
-    height: 1rem;
-    width: 1rem;
+    height: 1.5rem;
+    width: 1.5rem;
     list-style: none;
 }
 nav#socialLinks{
     float: right;
     margin: -2.5em 5px 0 0;
     padding: .35em;
-    background-color:#0000004d;
+    background-color:#07D5D5;
     height: 1.3em;
     position: inherit;
+    box-shadow: none !important;
     
 }
 nav#socialLink li{
@@ -221,6 +227,10 @@ nav#socialLink li{
     
 }
 
+
+#categoryLabel{
+    font-size: medium;
+}
 
 .productRow {
     /*height: 125px;*/
@@ -274,17 +284,24 @@ section div.item{
 }
 
 
+
 .seeMore{
     text-align: center;
-    width: 25%;
+    width: 10%;
     margin-left: auto;
     margin-right: auto;
     border: 0;
-    border-radius: 1px;
+    padding: .5rem;
+    border-radius: 1rem;
 }
-.seeMore h2:hover,
+
+.seeMore h2{
+    color: black;
+
+}
+
 .seeMore:hover{
-    background-color: #caa29860;
+    background-color: #029209;
     color: black;
 }
 
@@ -382,6 +399,8 @@ section div.item{
     width: 100%;
     border-radius: 4px;
     margin-top: 1rem;
+    resize: none;
+    padding: 4px;
 }
 
 .form{
@@ -399,11 +418,11 @@ button {
     color: black;
     background-color: #FFF;
     display: inline-block;
-    padding:0;
+    padding: 4px;
     border: 1px solid black;
     text-transform: uppercase;
     border-radius: 4px;
-    width: 103%;
+    width: 105%;
 }
 button:hover {
     background-color: #f3f3f3;
