--- a/main.css
+++ b/main.css
@@ -6,39 +6,6 @@ body {
     margin                 : 0;
 }
 
-h1 {
-    color    : #000000;
-    font-size: 2.0rem;
-    margin   : 0.5em 0 0.5em 0;
-    padding  : 0;
-}
-
-h2 {
-    color    : #745B2F;
-    font-size: 1rem;
-    padding  : 0px;
-    margin   : 0.5em 0 0.35em 0;
-}
-
-p {
-    font-size  : 1.2em;
-    line-height: 1.4em;
-    color      : #555555;
-    padding    : 0px;
-    margin     : 0px 0.5em 0.75em 0px;
-}
-
-ol {
-    font-size: 1.2em;
-    margin   : 0 0 0 1.0em;
-    padding  : 0 0 0 1.0em;
-}
-
-ol li {
-    margin : 0;
-    padding: 0 0 0.2em;
-}
-
 a,
 a:visited {
     color: #222;
@@ -49,21 +16,6 @@ a:hover {
     color: #FFF;
     columns: #888;
     text-decoration: none;
-}
-
-hr {
-    padding: 0;
-    margin : 1.5em 1.5em 0.75em 0.5em;
-}
-
-.select{
-    border-radius: 3px;
-}
-
-.contentWrapper {
-    margin   : 0 auto;
-    max-width: 1170px;
-    padding  : 0 3.0em;
 }
 
 .left {
@@ -80,16 +32,22 @@ div.clear {
 }
 
 /*Headers*/
+.navbar{
+    background-color: #07D5d5 !important;
+}
+.navbar-toggler:focus, .navbar-toggler:hover{
+    background-color: #07D5d5 !important;
+    border:0;
+}
+.navbar-light .navbar-toggler {
+    color: #07D5d5;
+    border:0;
+}
 header {
-    padding   : 2.5em 0 0.5em;
-    margin    : 0 0 2.0em;
     background: #07D5D5   no-repeat;
-    background-origin: content-box;
-    background-position: right bottom;
-    background-size: container;
-    border-bottom-left-radius: 1rem;
-    border-bottom-right-radius: 1rem;
-
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+    padding-bottom: 10px;
 }
 
 header h1 {
@@ -97,193 +55,113 @@ header h1 {
     color         : #000;
     font-size     : 7.5em;
     letter-spacing: -0.025em;
-    margin        : 0;
     text-shadow   : 4px 4px 5px #24a0a0 ;
                     /* offset-x | offset-y | blur-radius | color */
 }
 
-header h2 {
-    font-weight   : 300;
-    font-size     : 3.8em;
-    color         : #2Ba967;
-    margin        : -0.4em 0 0 1em;
-    text-transform: uppercase;
-    letter-spacing: .05em;
-}
-p {
-    font-size  : 1.2em;
-    line-height: 1.4em;
-    color      : #0f0f0f;
-    padding    : 0px;
-    margin     : 0px 0.5em 0.75em 0px;
+
+.page-title{
+    text-align: center;
 }
 
 .logoIMG{
     
-    height: 10rem;
-    
+    max-height: 200px
+}
+
+
+
+.social{
+    text-align: right;
+}
+
+
+.cart-icon{
+    max-width: 12px;
+    margin-left: 4px;
+    margin-bottom: 1px;
+}
+
+#socialLinks a:hover{
+    background-color: #07D5D5;
+}
+.social-icon{
+    max-width: 20px;
+}
+
+
+.content{
+    padding-top: 10px;
+}
+
+
+.product{
+    background: #C29A55;
+
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin: 10px;
+    border-radius: 1rem; 
+    box-shadow:  4px 8px 2px rgba(0, 0, 0, 0.644), 0 6px 20px 2px rgba(0, 0, 0, 0.19);
+}
+
+.product p:hover{
+    text
+}
+
+.productText{
+    display:block;
+    margin-left: 10px;
+    padding-top: 10px;
+}
+
+.product-img{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: -1rem;
-    margin-bottom: -6rem;
-}
-
-/*Nav Bars*/
-nav {
-    display: inline-block;
-    top: 10px;
-    right: 5px; 
-    color         : #000;
-    font-size     : 1.7em;
-    letter-spacing: 0.04em;
-    padding       : 1.0em 1.0em 0.25em;
-    margin        : 1.0em 0;
-    text-align: right;
-    background-color: rgba(255, 255, 0, 0.822);
-    position: fixed;
-    border-radius: 6px;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-    box-shadow:  1px 2px 5px rgba(0, 0, 0, 0.644), 0 6px 20px 2px rgba(0, 0, 0, 0.19);
-}
-
-nav ul {
-    margin    : 0;
-    padding   : 0;
-    list-style: none;
-}
-
-nav li {
-    display: inline-block;
-    margin : 0;
-}
-
-nav li a,
-nav li a:visited {
-    text-decoration: none;
-    color          : black;
-    padding        : 0.3em 0.15em;
-    
-}
-
-nav li a:hover {
-    color           : #c64322;
-    background-color: #88888833;
     border-radius: 4px;
-    
-}
-.cartIcon{
-    width: 1.25rem;
-    position: inherit;
-    margin-bottom: -.20rem;
-}
-h2{
- 
-}
-#socialLinks a:hover{
-    padding-top: 1rem !important;
-    background-color: #07D5D5;
-}
-.socialIcon{
-    height: 1.5rem;
-    width: 1.5rem;
-    list-style: none;
-}
-nav#socialLinks{
-    float: right;
-    margin: -2.5em 5px 0 0;
-    padding: .35em;
-    background-color:#07D5D5;
-    height: 1.3em;
-    position: inherit;
-    box-shadow: none !important;
-    
-}
-nav#socialLink li{
-    padding: 0 0.25em 0 0.2em;
-    vertical-align: middle;
 }
 
 
-.cartEmpty{
-    position: relative;
-    margin: 0 auto 2rem auto;
-    width: 40%;
-    height: 10rem;
-    text-align: center;
-    background: #888888cb;
-    border-radius: 1rem;
-    box-shadow:  4px 8px 10px rgba(0, 0, 0, 0.644), 0 6px 20px 2px rgba(0, 0, 0, 0.19);
-
-    
-}
-.cartEmpty h2{
-    color: black;
-    display: inline-block;
-    vertical-align: middle;
-    font-size: 2rem;
-    line-height: 7rem;
-    
-}
 
 
 #categoryLabel{
     font-size: medium;
 }
 
-.productRow {
-    /*height: 125px;*/
-    text-align: justify;
-    border: 10px solid transparent;
-   /* font-size: 0.1px; /* IE 9/10 don't like font-size: 0; */ 
-    min-width: 600px;
-    
-  }
-  .productRow div {
-    width: 150px;
-    /* height: 125px; */
-    display: inline-block;
-    background: #C29A55;
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;   
-    border-radius: 1rem; 
-    box-shadow:  4px 8px 2px rgba(0, 0, 0, 0.644), 0 6px 20px 2px rgba(0, 0, 0, 0.19);
+
+.empty-cart{
+    text-align: center;
+    /* width:100%; */
+    padding-top: 25px;
+    padding-bottom: 25px;
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 8px;
+    font-weight: bold;
+    box-shadow: 4px 8px 10px rgba(0, 0, 0, 0.644), 0 6px 20px 2px rgba(0, 0, 0, 0.19);
+    margin-bottom: 60px;
+    margin-top: 60px;
+    background-color: yellowgreen;
 }
-  .productRow:after {
-    content: '';
-    width: 100%; /* Ensures there are at least 2 lines of text, so justification works */
-    display: inline-block;
-  }
-  .shopItem{
-   
-    width: 8rem;
+.about-image{
+    border: 0;
+    border-radius: 10px;
+    margin-bottom: 5px;
+}
+.about-row{
+    padding-top: 10px;
+    font-size: 14px;
+}
+.bottom-about-image{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    border: 0;
-    border-radius: 1rem;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    max-height: 190px ;
 }
-.item{
-    padding: 1rem;
-}
-.itemPrice{
-    font-size: 1rem;
-}
-
-
-section div.item{
-    float: left;
-    position: relative;
-    width: 250px;
-    margin: 0 0.5em 2em 0.5em;
-    padding: 1.0em;
-    background-color: #FFF;
-    border: 0 #CCC solid 1px;
-    border-radius: .6rem;
-}
-
-
 
 .seeMore{
     text-align: center;
@@ -305,92 +183,7 @@ section div.item{
     color: black;
 }
 
-.aboutOne{
-    display: flex; 
-    align-items: center;
-    vertical-align: middle;
-    padding: 1rem;
-}
-
-.aboutOne img{
-    width: 30rem;
-    border: 2rem transparent;
-    border-radius: 2rem;
-    margin-left: 3rem;
-}
-.centerImage{
-    display: block;
-    width: 75%;
-    margin: 2rem auto 4rem auto;
-    position: relative;
-    /*border: 1rem solid transparent;*/
-    border-radius: 2rem;
-    
-}
-
-.aboutCenter{
-    width: 90%;
-    margin: 0 auto 0 auto;
-    font-size: .75rem;
-}
-.aboutCenter img{
-    /*
-    box-shadow: 4px 4px 8px;*/
-    box-shadow:  4px 8px 2px rgba(0, 0, 0, 0.644), 0 6px 20px 2px rgba(0, 0, 0, 0.19);
-}
-.aboutTwo{
-    display: flex; 
-    align-items: center;
-    padding: 1rem;
-}
-
-.aboutTwo img{
-    width: 25rem;
-    border: 2rem transparent;
-    border-radius: 2rem;
-    margin-right: 3rem;
-}
-
-.contactCenter{
-    width: 60%;
-    margin: 0 auto 0 auto;
-
-    display: flex;
-    margin-bottom: 4rem;
-}
-.contactLeft{
-    background: #C29A55;
-    width: 20rem;
-    margin: 0 auto 0 auto;
-    box-shadow:  4px 8px 2px rgba(0, 0, 0, 0.644), 0 6px 20px 2px rgba(0, 0, 0, 0.19);
-    border-radius: 1rem;
-
-}
-.contactLeft h2{
-    color: black;
-}
-.contactRight{
-    font-size: 1rem;
-    position: relative;
-    margin-right: auto;
-}
-.contactRight ul {
-    list-style: none;
-    padding: 1rem 0 1rem 0;
-}
-.contactPhoto{
-    margin: 0 auto 0 auto;
-    display: block;
-    width: 10rem;
-    border-radius: 1rem;
-    box-shadow:  4px 8px 2px rgba(0, 0, 0, 0.644), 0 6px 20px 2px rgba(0, 0, 0, 0.19);
-
-
-}
-
 .formCenter{
-    padding-top: 3rem;
-    padding-right: .75rem;
     width: 80%;
     margin: 0 auto 0 auto;
 }
@@ -428,68 +221,35 @@ button:hover {
     background-color: #f3f3f3;
     border: 1px solid #745b2f;
 }
-/* 
-.contactWrapper{
-    position: relative;
-    display: flex;
-    margin: 0 auto 4rem auto;
-    width: 50%;
-    margin-bottom: 4rem;
+ 
+.contact-image{
+    max-height: 300px;
+    border-radius: 4px;
 
 }
-
-.signupForm{
-    width: 40%;
-    height: 30rem;
-    background: #C29A55;
-    box-shadow:  4px 8px 2px rgba(0, 0, 0, 0.644), 0 6px 20px 2px rgba(0, 0, 0, 0.19);
-    margin: auto;
-    position: relative;
+.contact-button{
+    max-width: 100px;
 }
 
-.formItem{
-    position: block;
-    margin: 0 auto 0 auto;
-    width: 90%;
-}
-
-.contactInfo{
-    width: 40%;
-    height: 20rem;
-    padding-top: 10rem;
-    background: #00b0cf;
-    box-shadow:  4px 8px 2px rgba(0, 0, 0, 0.644), 0 6px 20px 2px rgba(0, 0, 0, 0.19);
-    margin: auto;
-    position: relative;
-}
-*/
-
-/*
-.contactInfo ul {
-    margin    : 0;
-    padding   : 0;
+.contact-list{
     list-style: none;
+    font-weight: bold;
+    font-size: 20px;
 }
-*/
 
 footer{
     background-color: #40362F;
-    height: 25px;
     font-size: 1.2em;
     color: #FFF;
     text-align: center;
-    padding: 1.5em 2.0em;
+    margin-top:15px;
 
 }
 footer ul#menuFooter{
-    display: inline-block;
-    list-style: none;
-    margin: 0 0 0 0.6em;
-    padding: 0;
+
 }
 footer ul li {
     display: inline-block;
-    padding: 0 0.7em 0 0;
     margin: 0;
 }
 footer ul li::before {
